-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 12.0.0-beta1
-
-
399e12c97 (12.0)
Steps to reproduce:
- open QC as qbs build
- open a CMakeLists.txt of any plugin
- Ctrl + hover on a filename of plugin
Creator crashes.
For Gerrit Dashboard: QTCREATORBUG-29715 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
509454,3 | CMakePM: Fix crash in findLinkAt | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |